[gd_scene load_steps=15 format=2]

[ext_resource path="res://personnages/mob.gd" type="Script" id=1]
[ext_resource path="res://personnages/mob.png" type="Texture" id=2]
[ext_resource path="res://sons/son cri.wav" type="AudioStream" id=3]
[ext_resource path="res://sons/monstre.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "mobleft",
"speed": 1.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "mobright",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 22, 21 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 21.5, 5.5 )

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 25, 16 )

[node name="mob" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 616, 366 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
frames = SubResource( 42 )
animation = "mobright"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
shape = SubResource( 43 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, 15.5 )
scale = Vector2( 2.2, 1.65 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( -0.5, -8.5 )
shape = SubResource( 47 )

[node name="KillTouch" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillTouch"]
modulate = Color( 1, 0.105882, 0.0117647, 1 )
self_modulate = Color( 0.776471, 0.741176, 0.741176, 1 )
position = Vector2( 0, 16 )
shape = SubResource( 48 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AudioMonstre" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="body_entered" from="KillTouch" to="." method="_on_KillTouch_body_entered"]
